<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.adminportatil.cebanc_tortillas.DatosCliente"
    android:background="@drawable/fondo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView_nombre"
        android:id="@+id/txtNombreOpcionesTortilla"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView_direccion"
        android:id="@+id/txtDireccion"
        android:layout_below="@+id/edtNombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView_telefono"
        android:id="@+id/txtTelefono"
        android:layout_below="@+id/txtDireccion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtNombre"
        android:hint="@string/person_name"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/txtDireccion"
        android:layout_toEndOf="@+id/txtDireccion"
        android:text="@string/editText_Nombre" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/edtDireccion"
        android:layout_below="@+id/edtNombre"
        android:layout_alignLeft="@+id/edtNombre"
        android:layout_alignStart="@+id/edtNombre"

        android:hint="@string/postal_address"
        android:text="@string/editText_Direccion" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_salir"
        android:id="@+id/btnSalir"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_siguiente"
        android:id="@+id/btnSiguiente"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonbuscacliente"
        android:id="@+id/btnBuscarCliente"
        android:layout_marginBottom="40dp"
        android:layout_above="@+id/btnSalir"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edtTelefono"
        android:maxLength="9"
        android:hint="@string/phone"
        android:text="@string/editText_Telefono"
        android:layout_alignTop="@+id/txtTelefono"
        android:layout_alignLeft="@+id/edtDireccion"
        android:layout_alignStart="@+id/edtDireccion" />
</RelativeLayout>
