<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtImporteTotal"
        android:layout_x="144dp"
        android:layout_y="363dp"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtNombreFactura"
        android:id="@+id/textView11"
        android:layout_x="4dp"
        android:layout_y="6dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtDireccionFactura"
        android:id="@+id/textView12"
        android:layout_x="3dp"
        android:layout_y="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtTelefonoFactura"
        android:id="@+id/textView13"
        android:layout_x="4dp"
        android:layout_y="66dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtNombreRecogidoFactura"
        android:id="@+id/txtDatosNombre"
        android:layout_x="110dp"
        android:layout_y="4dp"
        android:hint="Nombre Recogido" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtDatosDireccion"
        android:layout_x="109dp"
        android:layout_y="41dp"
        android:hint="Direccion Recogida" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_x="107dp"
        android:layout_y="67dp"
        android:hint="Telefono Recogido"
        android:id="@+id/txtDatosTelefono" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtBebidasCompradas"
        android:id="@+id/textView6"
        android:layout_x="4dp"
        android:layout_y="142dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtPrecioBebidas"
        android:id="@+id/textView14"
        android:layout_x="4dp"
        android:layout_y="184dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtCantidadTortillas"
        android:id="@+id/textView8"
        android:layout_x="3dp"
        android:layout_y="222dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtPrecioTortillas"
        android:id="@+id/textView15"
        android:layout_x="5dp"
        android:layout_y="254dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtImporteTotal"
        android:id="@+id/textView10"
        android:layout_x="4dp"
        android:layout_y="366dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtCantidadBebidas"
        android:layout_x="220dp"
        android:layout_y="147dp"
        android:hint="@string/txtCuantasBebidasCompradas" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSalirAplicacion"
        android:id="@+id/buttonSalir"
        android:layout_x="4dp"
        android:layout_y="457dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonReiniciarAplicacion"
        android:id="@+id/buttonReiniciar"
        android:layout_x="5dp"
        android:layout_y="401dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCalcularImporteTotal"
        android:id="@+id/buttonCalcularImporte"
        android:layout_x="90dp"
        android:layout_y="457dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtPrecioBebidas"
        android:layout_x="170dp"
        android:layout_y="186dp"
        android:hint="@string/txtPrecioBebidasFacturaFinal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtCantidadTortillas"
        android:layout_x="192dp"
        android:layout_y="224dp"
        android:hint="@string/txtCantidadTortillasFactura" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtPrecioTortillas"
        android:layout_x="166dp"
        android:layout_y="257dp"
        android:hint="@string/txtPrecioTortillasFactura" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonMostrarPedido"
        android:id="@+id/btnMostrarPedido"
        android:layout_x="235dp"
        android:layout_y="401dp" />

</AbsoluteLayout>