<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fondo">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView_tamañoTortilla"
        android:id="@+id/txtTamañoTortilla"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView_tipoTortilla"
        android:id="@+id/txtTipo"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/spinner_tipoHuevo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView_tipoHuevo"
        android:id="@+id/txtTipoHuevo"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/txtTamañoTortilla"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView_cantidad"
        android:id="@+id/txtCantidadCocacola"
        android:layout_marginTop="76dp"
        android:layout_below="@+id/txtTipo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_tamaño"
        android:layout_toRightOf="@+id/txtTipo"
        android:layout_toEndOf="@+id/txtTipo"
        android:spinnerMode="dropdown"
        android:layout_gravity="center" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_tipoHuevo"
        android:layout_alignTop="@+id/txtTipoHuevo"
        android:layout_toRightOf="@+id/txtTipoHuevo"
        android:layout_toEndOf="@+id/txtTipoHuevo"
        android:spinnerMode="dropdown"
        android:layout_gravity="center" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_tipoTortilla"
        android:layout_alignTop="@+id/txtTipo"
        android:layout_toRightOf="@+id/txtTipo"
        android:layout_toEndOf="@+id/txtTipo"
        android:spinnerMode="dropdown"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_Cantidad"
        android:layout_alignTop="@+id/txtCantidadCocacola"
        android:layout_alignLeft="@+id/spinner_tipoTortilla"
        android:layout_alignStart="@+id/spinner_tipoTortilla"
        android:hint="@string/editText_Cantidad" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSalirTortilla_SalirTortilla"
        android:id="@+id/btnSalir"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTortilla_SiguienteTortilla"
        android:id="@+id/btnSiguiente"
        android:layout_alignTop="@+id/btnSalir"
        android:layout_alignRight="@+id/spinner_tipoTortilla"
        android:layout_alignEnd="@+id/spinner_tipoTortilla"
        android:layout_gravity="right" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calcular Precio"
        android:id="@+id/btnCalcular"
        android:layout_above="@+id/btnSalir"
        android:layout_toRightOf="@+id/btnSalir"
        android:layout_toEndOf="@+id/btnSalir" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTotal"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_alignBottom="@+id/textView16"
        android:layout_toRightOf="@+id/textView16"
        android:layout_toEndOf="@+id/textView16"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtprecioTotalTortillasElegidas"
        android:id="@+id/textView16"
        android:layout_below="@+id/editText_Cantidad"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>